created logic so that when an animal is entered into the search field, a button populates that is clickable and displays 10 giphs

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 h1 {
     text-align: center;
     margin-bottom: 1.3em;
+    font-family: 'Rubik', sans-serif;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Quicksand', sans-serif;
+    font-family: 'Inconsolata', monospace;
+    font-family: 'Cabin', sans-serif;
+    font-family: 'VT323', monospace;
+    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
 }
