created array of topics and looped through them.  user can click on the looped buttons and have the api display.  however the functionality of created topics from form does not work

--- a/style.css
+++ b/style.css
@@ -10,3 +10,14 @@ h1 {
     font-family: 'Nunito', sans-serif;
     font-family: 'Nunito Sans', sans-serif;
 }
+
+button {
+    width: 140px;
+    height: 50px;
+    margin: 10px;
+    padding: 0px 20px 0px 20px;
+}
+
+form {
+    margin-top: 20px;
+}
