--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
 h1 {
     text-align: center;
     margin-bottom: 1.3em;
-    font-family: 'Rubik', sans-serif;
-    font-family: 'Pacifico', cursive;
-    font-family: 'Quicksand', sans-serif;
-    font-family: 'Inconsolata', monospace;
-    font-family: 'Cabin', sans-serif;
-    font-family: 'VT323', monospace;
-    font-family: 'Nunito', sans-serif;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Cabin Sketch', cursive;
+    color: #7FDBFF
+
 }
 
 button {
